--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "eslint": "^8.39.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -54,6 +55,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.0.4"
   }
 }
